--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
 Mongo = "mongodb+srv://mibinjoby9:EhzISIh0hKPBqkgT@merncluster.nsktgac.mongodb.net/Mern-estate?retryWrites=true&w=majority&appName=merncluster"
+JWT_SECRET=mysupersecretkey
